# ghced

./: README.md  ghced.cabal
src/: Cat.hs  Main.hs  World.hs
test/: Test.hs
