name:                ghced
category:            GHC, Editor
version:             0.1.0.0
synopsis:            GHC Editor
description:         GHC Editor
homepage:            https://github.com/mmn80/ghced
bug-reports:         https://github.com/mmn80/ghced/issues
author:              Călin Ardelean
maintainer:          Călin Ardelean <mmn80cpu@gmail.com>
copyright:           Copyright (c) 2016 Călin Ardelean
license:             MIT
license-file:        LICENSE.md
stability:           experimental
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/mmn80/ghced.git

executable ghced
  main-is:           Main.hs
  hs-source-dirs:    src
  other-modules:     World, Cat
  default-language:  Haskell2010
  ghc-options:       -O2 -Wall -threaded -rtsopts
  build-depends:
    base             >= 4.8 && < 5,
    containers,
    ghc              >= 8.0,
    ghc-paths